syntax = "proto3";

service AWSCryptoService {
  // HashPassword returns the password, hashed with Argon2i.
  rpc HashPassword(HashPasswordRequest) returns (HashPasswordResponse);
  // CheckPassword confirms that the password matches the hash. It supports both
  // bcrypt and Argon2. If the password matches, and the hash is anything other
  // than argon2i, an updated hash is returned by internally calling
  // HashPassword.
  rpc CheckPassword(CheckPasswordRequest) returns (CheckPasswordResponse);
}

message HashPasswordRequest { bytes password = 1; }

message HashPasswordResponse { bytes hash = 1; }

message CheckPasswordRequest {
  bytes password = 1;
  bytes hash = 2;
}

message CheckPasswordResponse {
  bool match = 1;

  // If `update==true`, the stored hash should be changed to `updated` for
  // improved security.
  bool update = 2;
  bytes updated = 3;

  string debug_reason = 4;
}